{
    "name": "TouchScreen",
    "maps": [
        {
            "name": "PuzzleActions",
            "id": "e1edfaa6-3765-4d65-95bf-0dfa660ac77e",
            "actions": [
                {
                    "name": "TouchPos",
                    "type": "Value",
                    "id": "e17834cd-b684-4532-8df3-2b3a95cdaab2",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c4d9dcab-7def-4064-9c2d-39a6262f6c2d",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPos",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "SightActions",
            "id": "a98caf49-1cd2-42ef-8036-b89a4a888251",
            "actions": [
                {
                    "name": "TouchPos_0",
                    "type": "Value",
                    "id": "9eeb3aba-5b97-4ccd-9b5a-2c8a9fc0f666",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchPos_1",
                    "type": "Value",
                    "id": "70dc3ac4-0342-49de-92d7-2970480b00bd",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Zoom",
                    "type": "Value",
                    "id": "fc661637-2275-423e-84d6-3f7008851afa",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c8bda7c0-4ebb-44c7-9a93-13e0746ed1c2",
                    "path": "<Touchscreen>/touch0/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPos_0",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "254fe3e5-5392-4c6f-8b09-ef325941dd36",
                    "path": "<Touchscreen>/touch1/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPos_1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7702f1a1-bcff-4db7-8aa3-f811d482d7c9",
                    "path": "<Touchscreen>/touch0/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Zoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "73c98b7d-6458-43cc-be19-fe99c60f747e",
                    "path": "<Touchscreen>/touch1/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Zoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}